@@ -14,7 +14,6 @@ import java.util.Locale;
 
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Route("date-picker-individual-input-fields")
@@ -29,11 +28,10 @@ public class DatePickerIndividualInputFields extends Div {
         LocalDate now = LocalDate.now(ZoneId.systemDefault());
 
         List<Integer> selectableYears = IntStream
-                .range(now.getYear() - 99, now.getYear() + 1).boxed()
-                .collect(Collectors.toList());
+                .range(now.getYear() - 99, now.getYear() + 1).boxed().toList();
 
         yearPicker = new ComboBox<>("Year", selectableYears);
-        yearPicker.setWidth(6, Unit.EM);
+        yearPicker.setWidth(7, Unit.EM);
         yearPicker.addValueChangeListener(e -> {
             updateMonthPicker();
             updateDayPicker();
@@ -42,14 +40,14 @@ public class DatePickerIndividualInputFields extends Div {
         monthPicker = new ComboBox<>("Month", Month.values());
         monthPicker.setItemLabelGenerator(
                 m -> m.getDisplayName(TextStyle.FULL, Locale.getDefault()));
-        monthPicker.setWidth(9, Unit.EM);
+        monthPicker.setWidth(10, Unit.EM);
         monthPicker.addValueChangeListener(e -> {
             updateDayPicker();
         });
         monthPicker.setEnabled(false);
 
         dayPicker = new ComboBox<>("Day");
-        dayPicker.setWidth(5, Unit.EM);
+        dayPicker.setWidth(6, Unit.EM);
         dayPicker.setEnabled(false);
 
         add(new HorizontalLayout(yearPicker, monthPicker, dayPicker));
@@ -80,8 +78,8 @@ public class DatePickerIndividualInputFields extends Div {
                 monthPicker.getValue(), 1);
         int lengthOfMonth = startOfMonth.lengthOfMonth();
 
-        dayPicker.setItems(IntStream.range(1, lengthOfMonth + 1).boxed()
-                .collect(Collectors.toList()));
+        dayPicker.setItems(
+                IntStream.range(1, lengthOfMonth + 1).boxed().toList());
     }
     // end::snippet[]
 
